# hel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: BUILTINS.md  CONTRIBUTING.md  INTRO.md  REFERENCE.md  SCHEMA.md  TRACING.md  USAGE.md
examples/c01-hel-embed/: Cargo.toml
examples/c01-hel-embed/src/: main.rs
hel-template/: Cargo.toml
hel-template/src/: lib.rs
src/: builtins.rs  hel.pest  lib.rs  trace.rs
src/schema/: mod.rs  package.rs
tests/: builtins_integration.rs  domain_packages.rs  script_evaluation.rs
